--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,9 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+#spain {
+    background-color: #00804b;
+}
+#italy {
+    background-color: #e22cca;
+}
